# paramecia

./: AGENTS.md  COMMANDS.md  Cargo.toml  INTRO.md  README.md
paramecia-acp/: Cargo.toml
paramecia-acp/src/: agent.rs  error.rs  lib.rs  types.rs
paramecia-acp/src/tools/: mod.rs  session_update.rs
paramecia-cli/: Cargo.toml
paramecia-cli/src/: args.rs  main.rs
paramecia-cli/src/commands/: agent_worker.rs  interactive.rs  mod.rs  programmatic.rs  setup.rs
paramecia-cli/src/ui/: app.rs  completion.rs  config_app.rs  context_progress.rs  game_of_life.rs  history.rs  input.rs  messages.rs  mod.rs  mode_indicator.rs  path_display.rs  spinner.rs  trust_dialog.rs  version_update.rs  welcome.rs  widgets.rs
paramecia-harness/: Cargo.toml
paramecia-harness/src/: agent.rs  background_training.rs  config.rs  error.rs  events.rs  lib.rs  middleware.rs  modes.rs  multishot_examples.rs  paths.rs  project_context.rs  prompts.rs  session.rs  system_prompt.rs  trusted_folders.rs  types.rs  utils.rs
paramecia-harness/src/prompts/: cli.md  git.md  tests.md
paramecia-llm/: Cargo.toml
paramecia-llm/examples/: local_agent.rs
paramecia-llm/src/: chat_template.rs  error.rs  format.rs  lib.rs  streaming_parser.rs  types.rs  xml_tool_parser.rs
paramecia-llm/src/backend/: factory.rs  local.rs  mod.rs  venture.rs
paramecia-mcp/: Cargo.toml
paramecia-mcp/src/: client.rs  error.rs  lib.rs  protocol.rs
paramecia-mcp/src/transport/: http.rs  mod.rs  stdio.rs
paramecia-model/: Cargo.toml
paramecia-model/examples/: combine_mtp_gguf.rs  qwen3_next.rs
paramecia-model/src/: layer_pipeline.rs  lib.rs  ops.rs  quantized_nn.rs  qwen3_next.rs  tokio_experts.rs  utils.rs
paramecia-model/src/generation/: mod.rs
paramecia-model/src/models/: mod.rs  with_tracing.rs
paramecia-opt/: Cargo.toml
paramecia-opt/examples/: qwen3_next_eggroll.rs
paramecia-opt/src/: batched_eval.rs  eggroll.rs  lib.rs
paramecia-opt/src/qzo/: mod.rs  moe.rs
paramecia-tools/: Cargo.toml
paramecia-tools/src/: error.rs  lib.rs  manager.rs  mcp_tool.rs  model_prompts.rs  tool_aliases.rs  types.rs
paramecia-tools/src/builtins/: bash.rs  grep.rs  mod.rs  read_file.rs  search_replace.rs  todo.rs  write_file.rs
paramecia-tools/src/builtins/prompts/: bash.md  grep.md  read_file.md  read_file_qwen.md  search_replace.md  todo.md  write_file.md
paramecia-tools/tests/: mcp_integration_test.rs
