[package]
name = "paramecia-acp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
paramecia-harness = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
