[package]
name = "paramecia-harness"
description = "Core types, configuration, and agent logic for Paramecia CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
paramecia-llm = { workspace = true }
paramecia-tools = { workspace = true }
paramecia-mcp = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

uuid = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
glob = { workspace = true }
dirs = { workspace = true }
dotenvy = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }

schemars = { workspace = true }
whoami = "1.5"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"

[features]
default = []
accelerate = ["paramecia-llm/accelerate"]
cuda = ["paramecia-llm/cuda"]
metal = ["paramecia-llm/metal"]
flash-attn = ["cuda", "paramecia-llm/flash-attn"]
