[package]
name = "paramecia-llm"
description = "Local LLM backend for Paramecia CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
tokio-stream = "0.1"
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true }
sha2 = "0.10"
regex = "1"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
hf-hub = { version = "0.4", features = ["tokio"] }
paramecia-model = { path = "../paramecia-model" }
candle = { package = "candle-core", git = "https://github.com/nicksenger/candle.git", branch = "paramecia" }
minijinja = { version = "2", features = ["json"] }

[dev-dependencies]
tokio-test = "0.4"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
paramecia-harness = { path = "../paramecia-harness" }
paramecia-tools = { path = "../paramecia-tools" }

[[example]]
name = "local_agent"
required-features = []

[features]
default = []
cuda = ["candle/cuda", "paramecia-model/cuda"]
metal = ["candle/metal", "paramecia-model/metal"]
flash-attn = ["cuda", "paramecia-model/flash-attn"]
