[package]
name = "paramecia-mcp"
description = "Model Context Protocol (MCP) client implementation for Paramecia CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

reqwest = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }

uuid = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
