[package]
name = "paramecia-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
candle = { package = "candle-core", path = "../../qzo/candle-core", version = "0.9.2-alpha.1" }
candle-nn = { package = "candle-nn", path = "../../qzo/candle-nn", version = "0.9.2-alpha.1" }
candle-flash-attn = { path = "../../qzo/candle-flash-attn", version = "0.9.2-alpha.1", optional = true }
crossbeam = "0.8"
half = "2.4"
rand = "0.9.0"
rayon = "1.10"
tokenizers = { version = "0.21.0", default-features = false, features = ["fancy-regex"] }
tracing = "0.1.37"

[dev-dependencies]
byteorder = "1.5"
candle-examples = { package = "candle-examples", path = "../../qzo/candle-examples", version = "0.9.2-alpha.1" }
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.4.1"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
serde = "1.0"
serde_json = "1.0"

[features]
default = []
cuda = ["candle/cuda", "candle-nn/cuda", "candle-examples/cuda"]
metal = ["candle/metal", "candle-nn/metal", "candle-examples/metal"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
