[package]
name = "paramecia-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
candle = { package = "candle-core", git = "https://github.com/nicksenger/candle.git", branch = "paramecia" }
candle-nn = { package = "candle-nn", git = "https://github.com/nicksenger/candle.git", branch = "paramecia" }
candle-flash-attn = { package = "candle-flash-attn", git = "https://github.com/nicksenger/candle.git", branch = "paramecia", optional = true }
crossbeam = "0.8"
half = "2.4"
rand = "0.9.0"
rayon = "1.10"
tokenizers = { version = "0.21.0", default-features = false, features = ["fancy-regex"] }
tracing = "0.1.37"

[dev-dependencies]
byteorder = "1.5"
candle-examples = { package = "candle-examples", git = "https://github.com/nicksenger/candle.git", branch = "paramecia" }
clap = { version = "4.2.4", features = ["derive"] }
hf-hub = "0.4.1"
tracing-chrome = "0.7.1"
tracing-subscriber = "0.3.7"
serde = "1.0"
serde_json = "1.0"

[features]
default = []
accelerate = ["candle/accelerate", "candle-nn/accelerate", "candle-examples/accelerate"]
cuda = ["candle/cuda", "candle-nn/cuda", "candle-examples/cuda"]
metal = ["candle/metal", "candle-nn/metal", "candle-examples/metal"]
flash-attn = ["cuda", "dep:candle-flash-attn"]
