[package]
name = "paramecia-opt"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
candle = { package = "candle-core", path = "../../qzo/candle-core", version = "0.9.2-alpha.1" }
candle-nn = { path = "../../qzo/candle-nn", package = "candle-nn", version = "0.9.2-alpha.1" }
paramecia-model = { path = "../paramecia-model" }
rand = "0.9.0"
rand_distr = "0.5.1"
thiserror = "1"

[dev-dependencies]
hf-hub = "0.4.1"
tokenizers = { version = "0.21.0", default-features = false, features = ["onig"] }
candle-examples = { path = "../../qzo/candle-examples", package = "candle-examples", version = "0.9.2-alpha.1" }
paramecia-model = { path = "../paramecia-model" }

[features]
default = []
cuda = [
    "candle/cuda",
    "candle-nn/cuda",
    "candle-examples/cuda",
    "paramecia-model/cuda",
]
metal = [
    "candle/metal",
    "candle-nn/metal",
    "candle-examples/metal",
    "paramecia-model/metal",
]
