[package]
name = "paramecia-tools"
description = "Tool abstractions and builtin tools for Paramecia CLI"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }

regex = { workspace = true }
glob = { workspace = true }
which = "7"

schemars = { workspace = true }

portable-pty = { workspace = true }
parking_lot = { workspace = true }
paramecia-mcp = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.15"
